--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://data.whicdn.com/images/309885955/original.gif"); 
+  background-image : url("https://data.whicdn.com/images/309885955/original.gif"); width: 100%; height: auto;
   background-repeat: repeat;
   background-size: cover;
-}
-
+} 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
