--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -4,24 +4,27 @@
     top:0px; 
     bottom: 0;
     width: 120px;
-    background-color:  rgb(44, 32, 2);
-    opacity: 0.5;
+    background-color:black;
+    opacity: 0.1;
     font-family: arial;
     font-weight: normal;
     font-size: 22px;
     color:white;
-    
+    opacity: 0; 
 }
-
-.left:hover {
-    background-color: rgb(44, 32, 2);
+/* 
+ .left:hover {
+    background-color: black;
     font-family: arial;
     font-weight: normal;
     font-size: 22px;
     opacity: 0.75;
     color: white;
-    box-shadow: 500px 500px 500px 500px, red;
-    }
+    width:100px;
+    
+    opacity: 0;
+  
+    }   */
 
 
 
